# fraud_detection

./: Dockerfile  README.md  app.py  conda_requirements.txt  credit_card_fraud.h5  fast.py  fraud_detection_variational_autoencoder.ipynb  generate_synthetic_data.py  ml-interface.yaml  model.h5  pyproject.toml  setup.py  setup.sh
.ipynb_checkpoints/: README-checkpoint.md  fraud_detection_autoencoder-checkpoint.ipynb  fraud_detection_visualization-checkpoint.ipynb  fraud_detectoin_autoencoder-checkpoint.ipynb  process_data_for_autoencoder-Copy1-checkpoint.ipynb  process_data_for_autoencoder-checkpoint.ipynb
dataset/: bank_transactions_data_2.csv  identified_fraud_autoencoder.csv  identified_fraud_variational_autoencoder.csv  identified_fraud_zscore.csv  synthetic_dataset.h5  synthetic_dataset_quantile.h5
extra_scripts/: create_mysql_database.py  fraud_detection_visualization.ipynb  visualize_features.ipynb
models/: fraud_VAE_model.pth  fraud_autoencoder_model.h5  vae_model_quantile_scaled_data.pth
notebooks/: exploratory_analysis.ipynb  extracting_info_ip_address.ipynb  fraud_detection_autoencoder.ipynb  fraud_detection_decision_tree.ipynb  fraud_detection_svm.ipynb  fraud_detection_variational_autoencoder.ipynb  synthetic_data_exploration.ipynb  visualizing_model_performance.ipynb
scalars/: quantle_scaler_VAE.pkl
scripts/: live_inference.py  server_start.sh  slim_data.py  start_fastapi_server.sh  train_encoder.py
templates/: index.html  input.html  interface.html  result.html
tests/: test_dl_pipeline.py  test_extract_mean_std.py  (+2 more)
(+10 files in other folders)
