[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_detection"
version = "0.1.0"
description = "A that detects fraud live using an auto encoder trained with pytorch"
authors = [
  { name = "Juan Cardenas", email = "cardenas.juan5453@gmail.com" }
]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

